# noteorg

./: Cargo.toml  README.md
examples/: test_note.rs  test_tree.rs
src/: cli.rs  editor.rs  lib.rs  main.rs  note.rs  search.rs  traversal.rs
