[package]
name = "noteorg"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "note"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.38"
crossterm = "0.29.0"
gray_matter = "0.3.2"
home-dir = "0.1.0"
regex = "1.12.2"
serde = "1.0.228"
serde_yaml = "0.9.34"
